Update/remake figures with new data format

--- a/Paper/JointCount_PLoS.tex
+++ b/Paper/JointCount_PLoS.tex
@@ -411,8 +411,8 @@ vegetation cover and climate.
 \centering
 Fig1
 \includegraphics[width=\textwidth]{Joint_Count_Files/firezones-1.pdf}
-\caption{\label{firezones}\textbf{Labelled map of zones (left) and the number
-and size of fires in each zone (right).} The number of fires is equally
+\caption{\label{firezones}\textbf{The number
+and size of fires in each zone, coloured by fire zone.} The number of fires is equally
 distributed across regions, but region 5 tends to have much larger fires
 than the other regions.}
 \end{figure}
@@ -808,7 +808,7 @@ are entirely above 0, entirely below 0, or contain 0.
 \begin{figure}[h!]
 \centering
 Fig3
-\includegraphics[width=\textwidth]{Joint_Count_Files/gammaltg-1.pdf}
+\includegraphics[width=\textwidth]{Figures/gammaltg.pdf}
 \caption{\label{gammaltg}\textbf{Posterior median estimates and 90\% Credible
 Intervals for the linking parameter in the model for lightning-caused
 fires.} There are very few years where the credible interval was entirely
