Final paper tweaks

--- a/Paper/JointCount_PLoS.tex
+++ b/Paper/JointCount_PLoS.tex
@@ -398,14 +398,12 @@ fire season is increasing with the changing climate
 \cite{albert-greenMethodologyInvestigatingTrends2013,hanesFireregimeChangesCanada2019},
 but we use the same definition for all years for our model building.
 
-British Columbia is partitioned into six fire management zones (Figure
-\ref{firezones}), which we will refer to generally as regions. These
-regions are chosen both for topological and administrative reasons. For
-example, regions 5 and 6 are separated by the Coastal Mountain Range,
-whereas regions 2 and 3 are separated by a highway with Kelowna on one
-side and Kamloops on the other. Although these regions are quite large,
-we assume that they are relatively homogeneous in terms of
-vegetation cover and climate.
+British Columbia is partitioned into six fire management zones, which we will refer to generally as regions. 
+The regions are defined in the data set and can be viewed on a map at \url{www2.gov.bc.ca} (the copyright terms do not allow the maps to be included in this publication).
+These regions are used both for topological and administrative reasons. 
+For an example of the differences between regions, regions 5 and 6 (Prince George and Northwest) are separated by the Coastal Mountain Range, whereas regions 2 and 3 (Kamloops and Caribou) are separated by a highway with Kelowna on one side and Kamloops on the other.
+Region 1 (Southeast) is comprised mostly of mountains, valleys, and rivers with most of the population along the highway to Kelowna, and Region 4 (Coastal) contains Vancouver, Vancouver Island, and the coastal mountain ranges.
+Although these regions are quite large, we assume that they are relatively homogeneous in terms of vegetation cover and climate.
 
 \begin{figure}[h!]
 \centering
@@ -808,7 +806,7 @@ are entirely above 0, entirely below 0, or contain 0.
 \begin{figure}[h!]
 \centering
 Fig3
-\includegraphics[width=\textwidth]{Figures/gammaltg.pdf}
+\includegraphics[width=\textwidth]{Joint_Count_Files/gammaltg-1.pdf}
 \caption{\label{gammaltg}\textbf{Posterior median estimates and 90\% Credible
 Intervals for the linking parameter in the model for lightning-caused
 fires.} There are very few years where the credible interval was entirely
